# Gyt

./: .gitignore  README.md  demo.sh  pyproject.toml
.gyt/: commits.json  config.json
src/: __main__.py
src/gyt/: __init__.py  cli.py  models.py
src/gyt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
